@@ -1,4 +1,6 @@
 /**
+ * SPDX-License-Identifier: (MIT OR CECILL-C)
+ *
  * Copyright (C) 2006-2019 INRIA and contributors
  *
  * Spoon is available either under the terms of the MIT License (see LICENSE-MIT.txt) of the Cecill-C License (see LICENSE-CECILL-C.txt). You as the user are entitled to choose the terms under which to adopt Spoon.
@@ -17,6 +19,11 @@ public class ComplianceOptions<T extends ComplianceOptions<T>> extends Options<T
 			args.add("-" + version);
 		}
 
+		return myself;
+	}
+
+	public T enablePreview() {
+		args.add("--enable-preview");
 		return myself;
 	}
 }
